@@ -48,6 +48,7 @@ exportMethods(
               "CSVSource",
               "ReutersSource",
               "GmaneSource",
+              "URISource",
               "FunctionGenerator",
               "WeightFunction",
 
@@ -164,6 +165,7 @@ exportClasses("TextDocument",
               "CSVSource",
               "ReutersSource",
               "GmaneSource",
+              "URISource",
               "FunctionGenerator",
               "WeightFunction")
 
