@@ -4,6 +4,7 @@
 \alias{eoi-methods}
 \alias{eoi,DirSource-method}
 \alias{eoi,CSVSource-method}
+\alias{eoi,URISource-method}
 \alias{eoi,ReutersSource-method}
 \alias{eoi,GmaneSource-method}
 \alias{eoi,VectorSource-method}
@@ -14,6 +15,8 @@
 \section{Methods}{
   \describe{
     \item{object = "DirSource"}{returns \code{TRUE} if the last item has
+      been reached.}
+    \item{object = "URISource"}{returns \code{TRUE} if the last item has
       been reached.}
     \item{object = "CSVSource"}{returns \code{TRUE} if the last item has
       been reached.}
