@@ -3,6 +3,7 @@
 \alias{getElem}
 \alias{getElem-methods}
 \alias{getElem,DirSource-method}
+\alias{getElem,URISource-method}
 \alias{getElem,CSVSource-method}
 \alias{getElem,ReutersSource-method}
 \alias{getElem,GmaneSource-method}
@@ -17,6 +18,7 @@
     \item{object = "CSVSource"}{Returns the element at current position from the source.}
     \item{object = "ReutersSource"}{Returns the element at current position from the source.}
     \item{object = "GmaneSource"}{Returns the element at current position from the source.}
+    \item{object = "URISource"}{Returns the element at current position from the source.}
     \item{object = "VectorSource"}{Returns the element at current position from the source.}
   }
 }
